gcc/testsuite/algol68/compile/error-module-nested-access-1.a68
module Foo = { dg-error "expected module text" }
          access Bar access Baz access Quux { dg-error "nested" }
def
    pub int bar = foo + baz;
    skip
fed
